--- a/01_prototyping/prototype.ipynb
+++ b/01_prototyping/prototype.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -146,30 +146,30 @@
     }
    ],
    "source": [
-    "# load the soap from url \n",
+    "# load the soap from url\n",
     "url = config[\"DATA\"][\"JOURNALS_URL\"]\n",
     "headers = config[\"DATA\"][\"HEADERS\"]\n",
-    "r=requests.get(url, headers=headers)\n",
+    "r = requests.get(url, headers=headers)\n",
     "soap = BeautifulSoup(r.content, \"html5lib\")\n",
     "\n",
     "# find all <td> with class 'journal-title'\n",
-    "journals_html = soap.find_all('td', class_='journal-name-cell')\n",
-    "print('Number of journals:', len(journals_html))\n",
+    "journals_html = soap.find_all(\"td\", class_=\"journal-name-cell\")\n",
+    "print(\"Number of journals:\", len(journals_html))\n",
     "journals = []\n",
     "\n",
     "# for each journal extract the title and the link\n",
     "for j in journals_html:\n",
     "\n",
     "    # extract the title and remove the \\n\n",
-    "    title = j.find('a').text\n",
-    "    title = title.replace('\\n', '')\n",
+    "    title = j.find(\"a\").text\n",
+    "    title = title.replace(\"\\n\", \"\")\n",
     "\n",
     "    # extract the link\n",
     "    link = f\"https://www.mdpi.com{j.find('a').get('href')}\"\n",
     "    journals.append((title, link))\n",
     "\n",
     "# convert journals to pandas\n",
-    "journals = pd.DataFrame(journals, columns=['title', 'link'])\n",
+    "journals = pd.DataFrame(journals, columns=[\"title\", \"link\"])\n",
     "journals"
    ]
   },
@@ -328,17 +328,17 @@
    "source": [
     "# for each journal navigate to the link and extract the description\n",
     "descriptions = []\n",
-    "for link in tqdm(journals['link']):\n",
+    "for link in tqdm(journals[\"link\"]):\n",
     "    r = requests.get(link, headers=headers)\n",
     "    soap = BeautifulSoup(r.content, \"html5lib\")\n",
-    "    description = soap.find('div', class_='journal__description__content').text\n",
+    "    description = soap.find(\"div\", class_=\"journal__description__content\").text\n",
     "    descriptions.append(description)\n",
     "\n",
     "    # sleep for 1 second\n",
     "    time.sleep(1)\n",
     "\n",
     "# add the descriptions to the journals\n",
-    "journals['description'] = descriptions\n",
+    "journals[\"description\"] = descriptions\n",
     "journals"
    ]
   },
@@ -483,11 +483,12 @@
    "source": [
     "# clean the descriptions\n",
     "def extract_open_access(description):\n",
-    "    end = description.find('Open Access')\n",
-    "    return description[:end].strip().replace('\\n', ' ')\n",
+    "    end = description.find(\"Open Access\")\n",
+    "    return description[:end].strip().replace(\"\\n\", \" \")\n",
     "\n",
-    "journals['description'] = journals['description'].apply(extract_open_access)\n",
-    "journals.to_csv('../data/journals.csv', index=False)\n",
+    "\n",
+    "journals[\"description\"] = journals[\"description\"].apply(extract_open_access)\n",
+    "journals.to_csv(\"../data/journals.csv\", index=False)\n",
     "journals"
    ]
   },
@@ -525,8 +526,8 @@
    ],
    "source": [
     "# synthetic manuscript\n",
-    "title = 'PDBcor: An automated correlation extraction calculator for multi-state protein structures'\n",
-    "abstract = 'Allostery and correlated motion are key elements linking protein dynamics with the mechanisms of action of proteins. Here, we present PDBCor, an automated and unbiased method for the detection and analysis of correlated motions from experimental multi-state protein structures. It uses torsion angle and distance statistics and does not require any structure superposition. Clustering of protein conformers allows us to extract correlations in the form of mutual information based on information theory. With PDBcor, we elucidated correlated motion in the WW domain of PIN1, the protein GB3, and the enzyme cyclophilin, in line with reported findings. Correlations extracted with PDBcor can be utilized in subsequent assays including nuclear magnetic resonance (NMR) multi-state structure optimization and validation. As a guide for the interpretation of PDBcor results, we provide a series of protein structure ensembles that exhibit different levels of correlation, including non-correlated, locally correlated, and globally correlated ensembles.'\n",
+    "title = \"PDBcor: An automated correlation extraction calculator for multi-state protein structures\"\n",
+    "abstract = \"Allostery and correlated motion are key elements linking protein dynamics with the mechanisms of action of proteins. Here, we present PDBCor, an automated and unbiased method for the detection and analysis of correlated motions from experimental multi-state protein structures. It uses torsion angle and distance statistics and does not require any structure superposition. Clustering of protein conformers allows us to extract correlations in the form of mutual information based on information theory. With PDBcor, we elucidated correlated motion in the WW domain of PIN1, the protein GB3, and the enzyme cyclophilin, in line with reported findings. Correlations extracted with PDBcor can be utilized in subsequent assays including nuclear magnetic resonance (NMR) multi-state structure optimization and validation. As a guide for the interpretation of PDBcor results, we provide a series of protein structure ensembles that exhibit different levels of correlation, including non-correlated, locally correlated, and globally correlated ensembles.\"\n",
     "\n",
     "# create the user prompt\n",
     "USER_PROMPT = config[\"GENAI\"][\"USER_PROMPT\"].format(title=title, abstract=abstract)\n",
@@ -541,15 +542,95 @@
     "\n",
     "# create completion\n",
     "completion = client.chat.completions.create(\n",
-    "  model=\"gpt-4-turbo\",\n",
-    "  messages=[\n",
-    "    {\"role\": \"system\", \"content\": config[\"GENAI\"][\"SYSTEM_PROMPT\"]},\n",
-    "    {\"role\": \"user\", \"content\": USER_PROMPT},\n",
-    "    {\"role\": \"assistant\", \"content\": CONTEXT_PROMPT},\n",
-    "  ]\n",
+    "    model=\"gpt-4-turbo\",\n",
+    "    messages=[\n",
+    "        {\"role\": \"system\", \"content\": config[\"GENAI\"][\"SYSTEM_PROMPT\"]},\n",
+    "        {\"role\": \"user\", \"content\": USER_PROMPT},\n",
+    "        {\"role\": \"assistant\", \"content\": CONTEXT_PROMPT},\n",
+    "    ],\n",
     ")\n",
     "\n",
     "print(completion.choices[0].message.content)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Based on the provided abstract for the manuscript titled \"PDBcor: An automated correlation extraction calculator for multi-state protein structures,\" here are the three most suitable MDPI journals along with their degree of match, titles, and links:\n",
+      "\n",
+      "| Degree of Match | Journal Title            | Journal Link                                              |\n",
+      "|-----------------|--------------------------|-----------------------------------------------------------|\n",
+      "| High            | Biomolecules             | [Biomolecules](https://www.mdpi.com/journal/biomolecules) |\n",
+      "| High            | Molecules                | [Molecules](https://www.mdpi.com/journal/molecules)       |\n",
+      "| Middle          | Computers                | [Computers](https://www.mdpi.com/journal/computers)       |\n",
+      "\n",
+      "### Justification for Matching:\n",
+      "\n",
+      "1. **[Biomolecules](https://www.mdpi.com/journal/biomolecules)**: This journal focuses on molecular mechanisms, biochemical processes, and structural biology, which align closely with the development and application of PDBcor for analyzing protein structures. The emphasis on biologically active compounds and molecular interactions in proteins makes Biomolecules an excellent fit for the manuscript.\n",
+      "\n",
+      "2. **[Molecules](https://www.mdpi.com/journal/molecules)**: While primarily focused on chemistry, Molecules has a broad scope that includes biochemistry and molecular biology topics. Your manuscript's focus on using chemical informatics tools (PDBcor) for understanding protein dynamics and structure fits well within the journal's interest in molecular research and applications in biological contexts.\n",
+      "\n",
+      "3. **[Computers](https://www.mdpi.com/journal/computers)**: Although Computers generally focuses on computer science and computational methods, the technological aspect of your manuscript—developing an automated tool for analyzing protein structures—could be of interest. This journal emphasizes novel computational methodologies and their applications, aligning with the computational elements of your research.\n",
+      "\n",
+      "These journals are recommended based on their relevance to the thematic elements and scientific discipline of your study, which includes bioinformatics tools, molecular biology, and computational approaches to biological data analysis.\n"
+     ]
+    }
+   ],
+   "source": [
+    "# test Flask endpoint\n",
+    "import requests\n",
+    "\n",
+    "# synthetic manuscript\n",
+    "title = \"PDBcor: An automated correlation extraction calculator for multi-state protein structures\"\n",
+    "abstract = \"Allostery and correlated motion are key elements linking protein dynamics with the mechanisms of action of proteins. Here, we present PDBCor, an automated and unbiased method for the detection and analysis of correlated motions from experimental multi-state protein structures. It uses torsion angle and distance statistics and does not require any structure superposition. Clustering of protein conformers allows us to extract correlations in the form of mutual information based on information theory. With PDBcor, we elucidated correlated motion in the WW domain of PIN1, the protein GB3, and the enzyme cyclophilin, in line with reported findings. Correlations extracted with PDBcor can be utilized in subsequent assays including nuclear magnetic resonance (NMR) multi-state structure optimization and validation. As a guide for the interpretation of PDBcor results, we provide a series of protein structure ensembles that exhibit different levels of correlation, including non-correlated, locally correlated, and globally correlated ensembles.\"\n",
+    "\n",
+    "manuscript = {\n",
+    "    \"title\": title,\n",
+    "    \"abstract\": abstract,\n",
+    "}\n",
+    "url = \"http://127.0.0.1:5000/recommend_streamlit\"\n",
+    "headers = {\"Authorization\": f'Bearer {config[\"FLASK\"][\"SECRET\"]}'}\n",
+    "\n",
+    "r = requests.post(url, headers=headers, json=manuscript)\n",
+    "print(r.json())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'error': 'Unauthorized'}\n"
+     ]
+    }
+   ],
+   "source": [
+    "# test Flask endpoint\n",
+    "import requests\n",
+    "\n",
+    "# synthetic manuscript\n",
+    "title = \"PDBcor: An automated correlation extraction calculator for multi-state protein structures\"\n",
+    "abstract = \"Allostery and correlated motion are key elements linking protein dynamics with the mechanisms of action of proteins. Here, we present PDBCor, an automated and unbiased method for the detection and analysis of correlated motions from experimental multi-state protein structures. It uses torsion angle and distance statistics and does not require any structure superposition. Clustering of protein conformers allows us to extract correlations in the form of mutual information based on information theory. With PDBcor, we elucidated correlated motion in the WW domain of PIN1, the protein GB3, and the enzyme cyclophilin, in line with reported findings. Correlations extracted with PDBcor can be utilized in subsequent assays including nuclear magnetic resonance (NMR) multi-state structure optimization and validation. As a guide for the interpretation of PDBcor results, we provide a series of protein structure ensembles that exhibit different levels of correlation, including non-correlated, locally correlated, and globally correlated ensembles.\"\n",
+    "\n",
+    "manuscript = {\n",
+    "    \"title\": title,\n",
+    "    \"abstract\": abstract,\n",
+    "}\n",
+    "url = \"http://127.0.0.1:5000/recommend_api\"\n",
+    "headers = {\"Authorization\": f'Bearer {config[\"FLASK\"][\"SECRET\"]}'}\n",
+    "\n",
+    "r = requests.post(url, headers=headers, json=manuscript)\n",
+    "print(r.json())"
    ]
   }
  ],
