--- a/01_prototyping/prototype.ipynb
+++ b/01_prototyping/prototype.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -555,30 +555,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Based on the provided abstract for the manuscript titled \"PDBcor: An automated correlation extraction calculator for multi-state protein structures,\" here are the three most suitable MDPI journals along with their degree of match, titles, and links:\n",
+      "Based on the abstract and topic of your manuscript \"PDBcor: An automated correlation extraction calculator for multi-state protein structures\", the most suitable journals from MDPI focus on topics related to proteins, molecular biology, bioinformatics, biophysics, and computational methods. Here are three recommended journals:\n",
       "\n",
-      "| Degree of Match | Journal Title            | Journal Link                                              |\n",
-      "|-----------------|--------------------------|-----------------------------------------------------------|\n",
-      "| High            | Biomolecules             | [Biomolecules](https://www.mdpi.com/journal/biomolecules) |\n",
-      "| High            | Molecules                | [Molecules](https://www.mdpi.com/journal/molecules)       |\n",
-      "| Middle          | Computers                | [Computers](https://www.mdpi.com/journal/computers)       |\n",
+      "| Journal | Degree of Match | Title | Link |\n",
+      "|---------|-----------------|-------|------|\n",
+      "| **International Journal of Molecular Sciences** | High | International Journal of Molecular Sciences | [Visit Journal](https://www.mdpi.com/journal/ijms) |\n",
+      "| **Biomolecules** | High | Biomolecules | [Visit Journal](https://www.mdpi.com/journal/biomolecules) |\n",
+      "| **Bioinformatics and Biology Insights** | Middle | Bioinformatics and Biology Insights | [Visit Journal](https://www.mdpi.com/journal/bioinformatics) |\n",
       "\n",
       "### Justification for Matching:\n",
       "\n",
-      "1. **[Biomolecules](https://www.mdpi.com/journal/biomolecules)**: This journal focuses on molecular mechanisms, biochemical processes, and structural biology, which align closely with the development and application of PDBcor for analyzing protein structures. The emphasis on biologically active compounds and molecular interactions in proteins makes Biomolecules an excellent fit for the manuscript.\n",
+      "1. **International Journal of Molecular Sciences (IJMS)**:\n",
+      "   - **Fit**: This journal covers a broad scope of molecular biosciences including molecular biology, biochemistry, and biophysics, all of which relate to the topic of protein structure correlations.\n",
+      "   - **Relevance**: IJMS publishes studies involving the analysis and understanding of molecular systems, fitting well with your manuscript's focus on automated methods for protein structural analysis.\n",
       "\n",
-      "2. **[Molecules](https://www.mdpi.com/journal/molecules)**: While primarily focused on chemistry, Molecules has a broad scope that includes biochemistry and molecular biology topics. Your manuscript's focus on using chemical informatics tools (PDBcor) for understanding protein dynamics and structure fits well within the journal's interest in molecular research and applications in biological contexts.\n",
+      "2. **Biomolecules**:\n",
+      "   - **Fit**: Directly focuses on biochemical studies, biophysical characterizations, and molecular interactions, which aligns perfectly with the analysis of protein structures and their dynamics in your work.\n",
+      "   - **Relevance**: The journal's focus on protein interactions and molecular biology makes it a strong candidate for manuscripts that discuss innovative tools like PDBcor for understanding protein behaviors.\n",
       "\n",
-      "3. **[Computers](https://www.mdpi.com/journal/computers)**: Although Computers generally focuses on computer science and computational methods, the technological aspect of your manuscript—developing an automated tool for analyzing protein structures—could be of interest. This journal emphasizes novel computational methodologies and their applications, aligning with the computational elements of your research.\n",
+      "3. **Bioinformatics and Biology Insights**:\n",
+      "   - **Fit**: While this journal has a broader scope including bioinformatics tools and applications, it offers a platform for discussing computational tools in biological research which is relevant to your software's application.\n",
+      "   - **Relevance**: Papers that introduce new computational methods for biological analysis can find an appropriate audience here.\n",
       "\n",
-      "These journals are recommended based on their relevance to the thematic elements and scientific discipline of your study, which includes bioinformatics tools, molecular biology, and computational approaches to biological data analysis.\n"
+      "These journals are chosen based on their scope covering molecular dynamics, protein science, computational biology, and bioinformatics, which matches the focus of your manuscript on a computational tool for analyzing protein structures.\n"
      ]
     }
    ],
@@ -594,7 +600,7 @@
     "    \"title\": title,\n",
     "    \"abstract\": abstract,\n",
     "}\n",
-    "url = \"http://127.0.0.1:5000/recommend_streamlit\"\n",
+    "url = \"http://localhost:5001/recommend_streamlit\"\n",
     "headers = {\"Authorization\": f'Bearer {config[\"FLASK\"][\"SECRET\"]}'}\n",
     "\n",
     "r = requests.post(url, headers=headers, json=manuscript)\n",
@@ -603,14 +609,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'error': 'Unauthorized'}\n"
+      "<Response [200]>\n"
      ]
     }
    ],
@@ -626,12 +632,30 @@
     "    \"title\": title,\n",
     "    \"abstract\": abstract,\n",
     "}\n",
-    "url = \"http://127.0.0.1:5000/recommend_api\"\n",
+    "url = \"http://0.0.0.0:5001/recommend_api\"\n",
     "headers = {\"Authorization\": f'Bearer {config[\"FLASK\"][\"SECRET\"]}'}\n",
     "\n",
     "r = requests.post(url, headers=headers, json=manuscript)\n",
     "print(r.json())"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'[\\n  {\\n    \"title\": \"Biomolecules\",\\n    \"description\": \"Biomolecules is a peer-reviewed, open access journal on structures and functions of bioactive and biogenic substances, molecular mechanisms with biological and medical implications as well as biomaterials and their applications. Biomolecules is published monthly online by MDPI.\",\\n    \"link\": \"https://www.mdpi.com/journal/biomolecules\",\\n    \"match_degree\": \"high\",\\n    \"justification\": \"The focus on molecular mechanisms and bioactive substances aligns well with the manuscript\\'s emphasis on protein dynamics and structural analysis.\"\\n  },\\n  {\\n    \"title\": \"Biosensors\",\\n    \"description\": \"Biosensors is an international, peer-reviewed, open access journal on the technology and science of biosensors published monthly online by MDPI.\",\\n    \"link\": \"https://www.mdpi.com/journal/biosensors\",\\n    \"match_degree\": \"middle\",\\n    \"justification\": \"The manuscript\\'s methodological focus on protein structure analysis aligns with the technological and application-oriented aspects of biosensor development in this journal.\"\\n  },\\n  {\\n    \"title\": \"Algorithms\",\\n    \"description\": \"Algorithms is a peer-reviewed, open access journal which provides an advanced forum for studies related to algorithms and their applications. Algorithms is published monthly online by MDPI.\",\\n    \"link\": \"https://www.mdpi.com/journal/algorithms\",\\n    \"match_degree\": \"low\",\\n    \"justification\": \"While the focus on algorithms is slightly tangential, the automated nature of the PDBcor tool may involve algorithmic elements that could be relevant for this journal.\"\\n  }\\n]'"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": []
   }
  ],
  "metadata": {
