fixed a problem with deployment in kube

--- a/01_prototyping/prototype.ipynb
+++ b/01_prototyping/prototype.ipynb
@@ -555,36 +555,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Based on the abstract and topic of your manuscript \"PDBcor: An automated correlation extraction calculator for multi-state protein structures\", the most suitable journals from MDPI focus on topics related to proteins, molecular biology, bioinformatics, biophysics, and computational methods. Here are three recommended journals:\n",
+      "Based on the manuscript titled \"PDBcor: An automated correlation extraction calculator for multi-state protein structures\", here are the three most suitable MDPI journals for submission:\n",
       "\n",
-      "| Journal | Degree of Match | Title | Link |\n",
-      "|---------|-----------------|-------|------|\n",
-      "| **International Journal of Molecular Sciences** | High | International Journal of Molecular Sciences | [Visit Journal](https://www.mdpi.com/journal/ijms) |\n",
-      "| **Biomolecules** | High | Biomolecules | [Visit Journal](https://www.mdpi.com/journal/biomolecules) |\n",
-      "| **Bioinformatics and Biology Insights** | Middle | Bioinformatics and Biology Insights | [Visit Journal](https://www.mdpi.com/journal/bioinformatics) |\n",
+      "| Degree of Match | Journal Title         | Link                                            |\n",
+      "|-----------------|-----------------------|-------------------------------------------------|\n",
+      "| High            | Biomolecules          | [Link](https://www.mdpi.com/journal/biomolecules) |\n",
+      "| High            | Algorithms            | [Link](https://www.mdpi.com/journal/algorithms)   |\n",
+      "| Middle          | Applied Sciences      | [Link](https://www.mdpi.com/journal/applsci)      |\n",
       "\n",
       "### Justification for Matching:\n",
       "\n",
-      "1. **International Journal of Molecular Sciences (IJMS)**:\n",
-      "   - **Fit**: This journal covers a broad scope of molecular biosciences including molecular biology, biochemistry, and biophysics, all of which relate to the topic of protein structure correlations.\n",
-      "   - **Relevance**: IJMS publishes studies involving the analysis and understanding of molecular systems, fitting well with your manuscript's focus on automated methods for protein structural analysis.\n",
+      "1. **Biomolecules**: This journal focuses on molecular studies which relate closely to the manuscript's theme of analyzing protein structures through computational tools. Its scope includes research on biochemistry and molecular biology, which aligns precisely with the manuscript's focus on protein dynamics and structure analysis using PDBcor.\n",
       "\n",
-      "2. **Biomolecules**:\n",
-      "   - **Fit**: Directly focuses on biochemical studies, biophysical characterizations, and molecular interactions, which aligns perfectly with the analysis of protein structures and their dynamics in your work.\n",
-      "   - **Relevance**: The journal's focus on protein interactions and molecular biology makes it a strong candidate for manuscripts that discuss innovative tools like PDBcor for understanding protein behaviors.\n",
+      "2. **Algorithms**: Since the manuscript discusses an automated and unbiased computational method (PDBcor), Algorithms is a fitting journal due to its focus on the development and application of computational algorithms across various scientific disciplines, including bioinformatics and molecular modeling.\n",
       "\n",
-      "3. **Bioinformatics and Biology Insights**:\n",
-      "   - **Fit**: While this journal has a broader scope including bioinformatics tools and applications, it offers a platform for discussing computational tools in biological research which is relevant to your software's application.\n",
-      "   - **Relevance**: Papers that introduce new computational methods for biological analysis can find an appropriate audience here.\n",
-      "\n",
-      "These journals are chosen based on their scope covering molecular dynamics, protein science, computational biology, and bioinformatics, which matches the focus of your manuscript on a computational tool for analyzing protein structures.\n"
+      "3. **Applied Sciences**: Although somewhat broader, this journal covers a range of interdisciplinary areas, including computational methodology and its application in science and engineering. The focus on practical applications of scientific and technical knowledge makes it a suitable option for disseminating a tool like PDBcor designed for practical uses in molecular biology.\n"
      ]
     }
    ],
